<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regitrationL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".View.ui.RegistrationActivity">

    <EditText
        android:id="@+id/userReg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/email"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/userReg"
        app:layout_constraintStart_toStartOf="@+id/userReg"
        app:layout_constraintTop_toBottomOf="@+id/userReg" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:padding="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailReg"
        app:layout_constraintStart_toStartOf="@+id/emailReg"
        app:layout_constraintTop_toBottomOf="@+id/emailReg" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Registration"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="@+id/passwordReg"
        app:layout_constraintStart_toStartOf="@+id/passwordReg"
        app:layout_constraintTop_toBottomOf="@+id/passwordReg" />

    <TextView
        android:id="@+id/alreadyHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/linkToLogIn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonReg"
        app:layout_constraintStart_toStartOf="@+id/buttonReg"
        app:layout_constraintTop_toBottomOf="@+id/buttonReg" />

</androidx.constraintlayout.widget.ConstraintLayout>